# sdf-nsc

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
_build_wsl/: CTestTestfile.cmake  DartConfiguration.tcl
_build_wsl/openvdb_compat/openvdb/: openvdb.h
_build_wsl/openvdb_compat/openvdb/io/: File.h
_build_wsl/openvdb_compat/openvdb/math/: Coord.h
_build_wsl/openvdb_compat/openvdb/tools/: MeshToVolume.h  PointIndexGrid.h
_build_wsl/openvdb_compat/tbb/: task.h  task_scheduler_init.h
apps/baseline_cam_nsc/: main.cpp
apps/baseline_drop_nsc/: main.cpp
apps/baseline_eccentric_roller_nsc/: main.cpp
apps/baseline_headon_sphere_nsc/: main.cpp
apps/baseline_onset_stress_b_nsc/: main.cpp
apps/baseline_onset_stress_nsc/: main.cpp
apps/baseline_rev_joint_clearance_nsc/: main.cpp
apps/baseline_simple_gear_nsc/: main.cpp
apps/mesh2vdb/: main.cpp
apps/test_obj2sdf/: main.cpp
apps/validate_compressed_contact/: main.cpp
apps/validate_compressed_contact_dynamics/: main.cpp
assets/cam/: cam_model.json  simple_cam.rmd
assets/cam/data/: cam_data.csv
assets/eccentric_roller/: eccentric_roller_model.json
assets/headon_spheres/: headon_spheres_model.json
assets/headon_spheres_mass_ratio/: headon_spheres_mass_ratio_model.json
assets/onset_stress/: onset_stress_model.json
assets/onset_stress_b/: onset_stress_b_model.json
assets/onset_stress_b_oblique/: onset_stress_b_oblique_model.json
assets/onset_stress_b_oblique_ellipse/: onset_stress_b_oblique_ellipse_model.json
assets/onset_stress_b_oblique_shoe/: onset_stress_b_oblique_shoe_model.json
assets/rev_joint_clearance/: rev_clearance_joint.rmd  rev_joint_clearance_model.json
assets/rev_joint_clearance/data/: body2.csv  body2_ideal.csv  body3.csv
assets/rev_joint_clearance/models/: extract_summary.json
assets/simple_gear/: extract.py  simple gear.rmd
assets/simple_gear/data/: Gear22.csv
data/reference/: assets_case_manifest.json  baseline_drop_nsc_reference.csv
data/reference/case_configs/: cam.json
data/reference/column_maps/: cam.json  simple_gear.json
docs/: ARCHITECTURE.md  ASSET_CASES.md  BUILD_AND_RUN.md  CAM_CASE_MAPPING.md  REPRODUCE_GEAR_ANOMALY.md  ROADMAP.md  cam_sdf_analysis_report.html  current_results_report.html  eccentric_roller_report.html  onset_stress_b_oblique_ablation_report.html  onset_stress_b_oblique_ellipse_ablation_report.html  onset_stress_b_oblique_report.html  onset_stress_b_oblique_shoe_ablation_report.html  onset_stress_b_report.html  onset_stress_report.html  rev_joint_clearance_report.html
include/platform/backend/: ChronoRigidSystemNSC.h  IRigidSystem.h
include/platform/backend/spcc/: CompressedContactPipeline.h  CompressedContactValidation.h  ContactActivation.h  (+12 more)
include/platform/common/: ContactAlgorithm.h
include/platform/models/: BaselineCamCase.h  BaselineDropCase.h  BaselineHeadOnSphereCase.h  BaselineRevoluteClearanceCase.h  BaselineSimpleGearCase.h  CamCaseConfig.h  DropCaseConfig.h  HeadOnSphereCaseConfig.h  RevoluteClearanceCaseConfig.h  SimpleGearCaseConfig.h
include/platform/validation/: ErrorMetrics.h  ReferenceCurve.h
include/tbb/: task_scheduler_init.h
papers/: main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  main.xdv  references_extra.bib
papers/figures/: draw_fig1.py  flowchart_contact_regime.fdb_latexmk  flowchart_contact_regime.fls  flowchart_contact_regime.tex  flowchart_contact_regime.xdv
papers/msd_submission/: 00_abstract_en.tex  03_methodology_en.tex  06_conclusion_en.tex  07_declarations_en.tex  README_MSD_SUBMISSION.txt  main.blg  main.fdb_latexmk  main.fls  main.tex  references.bib
papers/paper en/: 01_introduction_en.tex  02_related_work_en.tex  04_implementation_en.tex  05_experiments_en.tex  main_en.bbl  main_en.blg  main_en.fdb_latexmk  main_en.fls  main_en.tex  main_en.xdv
papers/paper1/: main.blg  main.fdb_latexmk  main.tex  references.bib
papers/paper1/figures/: draw_fig1.py  flowchart_contact_regime.tex  flowchart_model.tex
papers/paper1/sections/: 00_abstract.tex  02_related_work.tex  03_preliminaries.tex  04_implementation.tex  04_methodology.tex  05_analysis.tex  06_experiments.tex  09_references_placeholder.tex
papers/paper2/: main.bbl  sdf_wrench_preserving_reduction_full_paper_zh.tex
papers/paper2/sections/: 00_frontmatter.tex  01_introduction.tex  03_methodology.tex  04_methodology.tex  06_experiments.tex  07_conclusion.tex  08_symbols.tex
papers/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_methodology.tex  04_implementation.tex  05_experiments.tex  06_conclusion.tex
scripts/: bootstrap_all.sh  bootstrap_chrono.sh  bootstrap_vdb.sh  build_chrono_minimal.sh  build_project.sh  calc_rmse.py  clean_latex.py  clean_meth.py  compare_cam_case.py  compare_drop_case.py  compare_simple_gear_case.py  dump.py  export_cam_vtk_sweep.py  export_followup_case_vtk.py  extract_recurdyn_rmd_ggeom_to_obj.py  fix.py  fix_all.py  fix_all_latex.py  fix_latex_math.py  fix_methodology.py  fix_zero.py  generate_cam_analysis_report.py  generate_cam_benchmark_table.py  generate_current_results_report.py  generate_eccentric_roller_assets.py  generate_headon_benchmark_table.py  generate_headon_sphere_assets.py  generate_onset_stress_assets.py  generate_onset_stress_b_assets.py  generate_onset_stress_b_oblique_assets.py  generate_onset_stress_b_oblique_ellipse_assets.py  generate_onset_stress_b_oblique_shoe_assets.py  generate_rev_joint_clearance_assets.py  generate_rev_joint_clearance_report.py  list_schemes.py  list_schemes2.py  plot_cam_accuracy_robustness_paper.py  plot_cam_benchmark_paper.py  plot_compressed_contact_linkage.py  plot_compressed_contact_variants.py  (+25 more)
src/backend/chrono/: ChronoRigidSystemNSC.cpp
src/models/: BaselineCamCase.cpp  BaselineDropCase.cpp  BaselineHeadOnSphereCase.cpp  BaselineRevoluteClearanceCase.cpp  BaselineSimpleGearCase.cpp
src/validation/: ErrorMetrics.cpp  ReferenceCurve.cpp
tests/spcc/: CompressedContactPipeline_test.cpp  ContactActivation_test.cpp  LocalWrenchAllocator_test.cpp  SPCCProblem_test.cpp  VDBSDFField_test.cpp
(+12 files in other folders)
